<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        tools:context=".MainActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_fajr"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/fajr"
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/fajr" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_zuhr"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/zuhr"
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/zuhr" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_asr"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/asr"
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/asr" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_maghrib"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/maghrib"
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/maghrib" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_isha"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/isha"
                android:layout_width="wrap_content"
                android:textSize="22dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/isha" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>

